# treasures

./: TREASURE_MAP.md
business/: 1_AUTH_MIDDLEWARE.txt  2_LOGIBOT_ENGINE.txt  3_API_GATEWAY.txt  4_MEMORY_PIPELINE.txt  5_ARCHITECTURE.txt  IMPLEMENTATION_GUIDE.txt  PATENT_ABSTRACT.MD  SHANEBRAIN_VAULT_CLEAN.md  SHANEBRAIN_VAULT_COMPLETE.md  WEEK1_IMPLEMENTATION_GUIDE.txt  WEEK2_1_PAYMENT_INTEGRATION.txt  WEEK2_2_USER_DASHBOARD.txt  WEEK2_3_PRODUCTION_OPTIMIZATION.txt  WEEK2_4_ADVANCED_FEATURES.txt  WEEK2_MASTER_GUIDE.txt  (+3 more)
projects/angelcloud-actual/: .firebaserc  Aggregate Price by Location as of 10_06_2025.csv  AngelCloud_WelcomeCenter_3D.ipynb  README.md  __init__.py  agent_manifest.json  angel-auth-bridge.js  angel_chat_v2.js  dispatch_calculator_service.js  firebase.json  firestore.rules  launch_angel_cloud.js  ledger.js  legacy_ai_integration_client.js  mega-dashboard.html  package-lock.json  package.json  pulsar_security_core.js  pyproject.toml  shanebrain_ai_console_prototype.ipynb  test_data_parser.py  test_ledger.js  test_pulsar_core.js  voice_mode_final.js
projects/angelcloud-actual/aggregate_pricer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
projects/angelcloud-actual/angel-cloud-blueprints/: Pulsar AI Agent State Record ASR.md  Pulsar AI Blockchain Security Minimum Viable Architecture MVA.md  Pulsar AI Defining Unique Blockchain Security.md  Pulsar AI Layer 4 Consensus Shield.md  Pulsar AI Quarantine Protocol.md  Pulsar ASR Uniqueness Assurance.md  Pulsar Threat Score (PTS) Formula.md  Shanebrain AI Sidekick Core Blueprint.md  examples ASR - Can you give me an example.md  governance_framework.md
projects/angelcloud-actual/data/: agent_roles.json  resource_risk.json
projects/angelcloud-actual/logistics_api/: pyproject.toml  quoter.py  requirements.txt
projects/claim-cruncher-extracted/apps/api/: pyproject.toml
projects/claim-cruncher-extracted/apps/api/app/: config.py  dependencies.py  main.py
projects/claim-cruncher-extracted/apps/api/app/middleware/: audit.py  rbac.py
projects/claim-cruncher-extracted/apps/api/app/models/: __init__.py  claim.py  credential.py  facility.py  organization.py  patient.py  ticket.py  user.py
projects/claim-cruncher-extracted/apps/api/app/routers/: auth.py  claims.py  credentials.py  cruncher.py  documents.py  facilities.py  organizations.py  patients.py  reports.py  tickets.py
projects/claim-cruncher-extracted/apps/api/app/services/: auth.py
projects/claim-cruncher-extracted/apps/worker/: pyproject.toml
projects/claim-cruncher-extracted/apps/worker/app/: main.py
projects/claim-cruncher-extracted/apps/worker/app/ocr/: base.py  document_ai.py  tesseract.py  textract.py
projects/claim-cruncher-extracted/apps/worker/app/tasks/: credential_expiry.py  ocr_pipeline.py  report_generation.py
(+821 files in other folders)
