[project]
name = "claim-cruncher-worker"
version = "0.1.0"
description = "Claim Cruncher - Background Worker (OCR, alerts, reports)"
requires-python = ">=3.11"
dependencies = [
    "arq>=0.26",
    "redis>=5.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "pytesseract>=0.3",
    "Pillow>=10.0",
    "pdf2image>=1.17",
    "anthropic>=0.40",
    "httpx>=0.27",
    "pgvector>=0.3",
]
